--- a/femcoservice/femcoservice.csproj
+++ b/femcoservice/femcoservice.csproj
@@ -205,6 +205,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Classe\FilesHelper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\API\ProductosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
